added start button

--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="app">
+<div id="start-container">
+    <h1>Welcome to the Football Trivia Quiz!</h1>
+    <p>Click below to start!</p>
+    <button id="start-btn">Start Game</button>
+</div>
+<div id="quiz-container" class="app" style="display: none;">
     <h1>Football Quiz</h1>
     <div class="quiz">
         <h2 id="question">Question goes here</h2>
